--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,80 +2,6 @@
 
 @import "reset";
 
-@mixin neon_line {
-	position: absolute;
-	filter: drop-shadow(0px 0px 10px rgb(241, 149, 189, 0.8));
-}
-
-@mixin stars {
-	.stars-bg {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		z-index: 1;
-
-		.stars {
-			background: #fff;
-			
-			border-radius: 50%;
-			position: absolute;
-			box-shadow: 0 0 0px #fff, 0 0 0px #fff, 0 0 21px #fff, 0 0 4px #ffffff, 0 0 6px #ffffff;
-			// 1~5s 사이 값 전달하기
-			// transition: 3s;
-			// 애니메이션으로 0부터 1까지 주기
-			animation: staropa var(--randomtransition) linear infinite;
-			left: var(--randomstarsleft);
-			top: var(--randomstarstop);
-		}
-
-		@keyframes staropa {
-			0% {
-				opacity: 1;
-			}
-			50% {
-				opacity: 0;
-			}
-			100% {
-				opacity: 1;
-			}
-		}
-	}
-}
-
-@mixin info-title {
-
-		i {
-			margin-right: 10px;
-		}
-
-		b {
-			text-transform: capitalize; 
-		};
-}
-
-@mixin circle {
-
-	.infoQ {
-
-		.circle {
-			width: 3px;
-			height: 3px;
-			border: 3px solid #ccc;
-			display: inline-block;
-			border-radius: 50%;
-			margin-right: 5px;
-		}
-
-		p {
-			display: inline-block;
-			margin-right: 20px;
-			text-transform: capitalize;
-			font-size: 12px;
-		}
-	}
-
-}
-
 body {
 	background-color: #f9c5d1;
 	background-image: linear-gradient(315deg, #f9c5d1 0%, #9795ef 74%);
@@ -402,204 +328,9 @@ body {
 			}
 		} //portpolio-wrap
 
-		.about-me-wrap {
-			width: 100%;
-			height: 100vh;
-			margin-top: 200px;
-			position: relative;
+		
 
-			@include stars;
-
-			.bg-telescope {
-				width: 110px;
-				top: 245px;
-				left: 150px;
-				transform: rotate(-25deg);
-				animation: updown 5s ease infinite;
-
-				@include neon_line;
-			}
-
-			.bg-whale {
-				top: -655px;
-				left: 600px;
-
-				@include neon_line;
-			}
-
-			.bg-astronaut {
-				width: 80px;
-				bottom: 200px;
-				right: 100px;
-
-				@include neon_line;
-			}
-
-			
-			@keyframes updown {
-				to {
-					top: 245px;
-				}
-				50% {
-					top: 275px;
-				}
-				from {
-					top: 245px;
-				}
-			}
-
-			.about-me {
-				width: 1200px;
-				height: 800px;
-				margin: 0 auto;
-				display: flex;
-				justify-content: space-between;
-				position: relative;
-				z-index: 2;
-
-				.about-me-left {
-					width: 200px;
-					height: 100%;
-
-					.about-me-portrait {
-						width: 200px;
-						height: 200px;
-						border-radius: 50%;
-						background: no-repeat 50% 25%/100% url(/images/portrait.jpg);
-
-						@include neon_line;
-					}
-				}
-
-				.about-me-right {
-					width: 900px;
-					height: 100%;
-					display: flex;
-					flex-direction: column;
-
-					.about-me-info {
-						width: calc(100% - 60px);
-						height: 300px;
-						border-radius: 20px;
-						background-color: #fff;
-						z-index: 2;
-						display: flex;
-						padding: 15px 30px 15px 30px;
-
-						&:not(:last-child) {
-							margin-bottom: 50px;
-						}
-						
-						&:first-child {
-
-							&::before {
-								position: absolute;
-								content: "";
-								width: 0px;
-								height: 0px;
-								border-bottom: 30px solid #fff;
-								border-left: 25px solid transparent;
-								border-right: 25px solid transparent;
-								transform: rotate(270deg);
-								left: -4%;
-								top: 20%;
-							}
-						}
-						
-						@include neon_line;
-						//position값을 기본 값으로
-						position: inherit;
-
-						.about-me-info-left {
-							width: 50%;
-							height: 100%;
-							background-color: rebeccapurple;
-							// display: flex;
-							flex-direction: column;
-							justify-content: space-between;
-
-							@include info-title;
-
-							.info-wrap {
-								color: #ccc;
-								display: flex;
-								width: 400px;
-								justify-content: space-between;
-								padding-top: 5px ;
-
-								@include circle;
-
-
-								.infoA {
-									width: 70%;
-									text-align: left;
-								}
-							}
-						}
-
-						.about-me-info-right {
-							width: 50%;
-							height: 100%;
-							background-color: wheat;
-
-							@include info-title;
-
-							.ex-wrap {
-								color: #ccc;
-								width: 400px;
-								padding-top: 5px;
-						
-								@include circle;
-						
-								.exA {
-									font-size: 12px;
-									line-height: 14px;
-									padding: 6px 0px 0px 16px;
-								}
-							
-							}
-						}
-
-
-						.about-me-skill-info-box {
-
-							width: 100%;
-							height: 100%;
-							background-color: rebeccapurple;
-							// display: flex;
-							flex-direction: column;
-							justify-content: space-between;
-
-							@include info-title;
-
-							.skill-info-wrap {
-								color: #ccc;
-								width: 100%;
-								padding-top: 5px;
-						
-								@include circle;
-
-						
-								.skill-info {
-									font-size: 12px;
-									line-height: 14px;
-									text-align: justify;
-									padding: 6px 16px 0px 16px;
-								}
-							
-							}
-						}
-					} //about-me-info
-
-				} //about-me-right
-
-			} //about-me 
-
-
-
-		} //about-me-wrap
-
-		.about-me1 {
+		.about-me {
 			width: 100%;
 			height: 500vh;
 			margin: 100vh 0;
@@ -786,6 +517,7 @@ body {
 									align-items: center;
 									justify-content: center;
 									border-radius: 10px;
+									cursor: pointer;
 
 									span {
 										font-size: 12px;
@@ -810,22 +542,24 @@ body {
 					position: static;
 					width: 100vw;
 					height: 100vh;
-
+					display: none;
 					z-index: 100;
 
 					.skill-modal {
 						width: 100%;
 						height: 100%;
+						display: none;
 					}
 
 					.modal-on {
 						
 						background-color: rgba(0, 0, 0, 0.7);
+						display: block;
 
 						
 						.modal {
 							width: 800px;
-							height: 400px;
+							height: var(--modalHeight);
 							position: absolute;
 							top: 50%;
 							left: 50%;
@@ -877,13 +611,10 @@ body {
 										margin-top: 15px;
 
 										i {
-											padding-right: 5px;
-											font-size: 12px;
+											padding-right: 7px;
+											font-size: 10px;
 										}
 
-										span {
-
-										}
 									}
 								}
 							}
