--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -1,5 +1,79 @@
 @charset "UTF-8";
 
+@mixin neon_line {
+	position: absolute;
+	filter: drop-shadow(0px 0px 10px rgb(241, 149, 189, 0.8));
+}
+
+@mixin stars {
+	.stars-bg {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		z-index: 1;
+
+		.stars {
+			background: #fff;
+			
+			border-radius: 50%;
+			position: absolute;
+			box-shadow: 0 0 0px #fff, 0 0 0px #fff, 0 0 21px #fff, 0 0 4px #ffffff, 0 0 6px #ffffff;
+			// 1~5s 사이 값 전달하기
+			// transition: 3s;
+			// 애니메이션으로 0부터 1까지 주기
+			animation: staropa var(--randomtransition) linear infinite;
+			left: var(--randomstarsleft);
+			top: var(--randomstarstop);
+		}
+
+		@keyframes staropa {
+			0% {
+				opacity: 1;
+			}
+			50% {
+				opacity: 0;
+			}
+			100% {
+				opacity: 1;
+			}
+		}
+	}
+}
+
+@mixin info-title {
+
+    i {
+        margin-right: 10px;
+    }
+
+    b {
+        text-transform: capitalize; 
+    };
+}
+
+@mixin circle {
+
+.infoQ {
+
+    .circle {
+        width: 3px;
+        height: 3px;
+        border: 3px solid #ccc;
+        display: inline-block;
+        border-radius: 50%;
+        margin-right: 5px;
+    }
+
+    p {
+        display: inline-block;
+        margin-right: 20px;
+        text-transform: capitalize;
+        font-size: 12px;
+    }
+}
+
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -13,3 +87,4 @@ li, ol, ul {
 a {
     text-decoration: none;
 }
+
