--- a/css/index.css
+++ b/css/index.css
@@ -342,7 +342,7 @@ body {
   font-size: 45px;
   color: #4A374F;
 }
-#wrap main .portpolio-wrap .protpolio .protpolio-content {
+#wrap main .portpolio-wrap .protpolio .protpolio-slide-wrap {
   width: 100%;
   height: 600px;
   background-color: wheat;
