--- a/scss/index.scss
+++ b/scss/index.scss
@@ -319,7 +319,7 @@ body {
 					}
 				}
 
-				.protpolio-content {
+				.protpolio-slide-wrap {
 					width: 100%;
 					height: 600px;
 					background-color: wheat;
