--- a/css/index.css
+++ b/css/index.css
@@ -326,7 +326,7 @@ body {
     left: 100%;
   }
 }
-#wrap main .portpolio-wrap .protpolio {
+#wrap main .portpolio-wrap .portpolio {
   width: 1200px;
   height: 100vh;
   margin: 150px auto 0 auto;
@@ -334,19 +334,79 @@ body {
   position: relative;
   z-index: 2;
 }
-#wrap main .portpolio-wrap .protpolio .protpolio-title {
+#wrap main .portpolio-wrap .portpolio .portpolio-title {
   padding: 100px 0 0 100px;
 }
-#wrap main .portpolio-wrap .protpolio .protpolio-title h2 {
+#wrap main .portpolio-wrap .portpolio .portpolio-title h2 {
   font-weight: bold;
   font-size: 45px;
   color: #4A374F;
 }
-#wrap main .portpolio-wrap .protpolio .protpolio-slide-wrap {
+#wrap main .portpolio-wrap .portpolio .portpolio-slide-wrap {
   width: 100%;
   height: 600px;
-  background-color: wheat;
   margin-top: 50px;
+  position: relative;
+  overflow: hidden;
+}
+#wrap main .portpolio-wrap .portpolio .portpolio-slide-wrap .slide-container {
+  width: 100%;
+  height: 100%;
+  background-color: rosybrown;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 1s;
+}
+#wrap main .portpolio-wrap .portpolio .portpolio-slide-wrap .slide-container .slide {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+#wrap main .portpolio-wrap .portpolio .controls {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 999999;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  transition: all 0.3s ease-in;
+  background: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  line-height: 5rem;
+  font-size: 20px;
+  color: #444;
+}
+#wrap main .portpolio-wrap .portpolio #prev {
+  left: 20px;
+}
+#wrap main .portpolio-wrap .portpolio #next {
+  right: 20px;
+}
+#wrap main .portpolio-wrap .portpolio .disabled {
+  display: none;
+}
+#wrap main .portpolio-wrap .portpolio .pager {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+}
+#wrap main .portpolio-wrap .portpolio .pager a {
+  width: 10px;
+  height: 10px;
+  margin: 0 10px;
+  border-radius: 50%;
+  background: #ccc;
+  text-indent: -9999em;
+  cursor: pointer;
+  display: inline-block;
+}
+#wrap main .portpolio-wrap .portpolio .pager .active {
+  background: #000;
 }
 #wrap main .about-me {
   width: 100%;
