--- a/scss/index.scss
+++ b/scss/index.scss
@@ -305,7 +305,6 @@ body {
 				width: 1200px;
 				height: 100vh;
 				margin: 150px auto 0 auto;
-				background-color: rebeccapurple;
 				position: relative;
 				z-index: 2;
 
@@ -329,7 +328,6 @@ body {
 					.slide-container {
 						width: 100%;
 						height: 100%;
-						background-color: rosybrown;
 						position: absolute;
 						left: 0;
 						top: 0;
@@ -340,6 +338,81 @@ body {
 							top: 0;
 							width: 100%;
 							height: 100%;
+							background-color: #fff;
+
+							.content {
+								width: 100%;
+								height: 100%;
+								display: flex;
+
+								.content-left {
+									width: 400px;
+									height: 100%;
+									position: relative;
+
+									.portfolio-content-info-box {
+										position: absolute;
+										width: 80%;
+										top: 50%;
+										left: 50%;
+										transform: translate(-50%, -50%);
+
+										.portfolio-content-title {
+											font-size: 32px;
+											font-weight: 300;
+											color: #333;
+										}
+
+										.portfolio-content-info {
+											padding-top: 30px;
+											font-size: 20px;
+    										color: #121212;
+										}
+
+										.portfolio-content-info2 {
+											padding-top: 13px;
+											font-size: 12px;
+										}
+									}
+
+									.portfolio-content-view-btn {
+										font-size: 20px;
+										padding: 10px 35px;
+										border: 1px solid #ababab;
+										letter-spacing: 5px;
+										position: absolute;
+										bottom: 80px;
+										left: 50%;
+										transform: translateX(-50%);
+									}
+								}
+
+								.content-right {
+									width: 800px;
+									height: 100%;
+
+									.content-portpolio-img {
+										width: 100%;
+										height: 450px;
+										position: relative;
+										overflow: hidden;
+
+										img {
+											position: absolute;
+											top: 0;
+											left: 0;
+											bottom: inherit;
+											width: 100%;
+											height: auto;
+											transition: 10s ease-in-out;
+										}
+
+
+									}
+
+									@include skill-button;
+								}
+							}
 						}
 					}
 				}
