--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -53,25 +53,44 @@
 
 @mixin circle {
 
-.infoQ {
+	.infoQ {
 
-    .circle {
-        width: 3px;
-        height: 3px;
-        border: 3px solid #ccc;
-        display: inline-block;
-        border-radius: 50%;
-        margin-right: 5px;
-    }
+		.circle {
+			width: 3px;
+			height: 3px;
+			border: 3px solid #ccc;
+			display: inline-block;
+			border-radius: 50%;
+			margin-right: 5px;
+		}
 
-    p {
-        display: inline-block;
-        margin-right: 20px;
-        text-transform: capitalize;
-        font-size: 12px;
-    }
+		p {
+			display: inline-block;
+			margin-right: 20px;
+			text-transform: capitalize;
+			font-size: 12px;
+		}
+	}
+
 }
+@mixin skill-button {
+	.portfolio-skill-box {
+		position: absolute;
+		bottom: 30px;
+		left: 400px;
 
+		.skills {
+			padding: 6px 12px;
+			border: 1px solid #ababab;
+			border-radius: 10px;
+			margin-right: 15px;
+			display: inline-block;
+			font-size: 11px;
+			box-shadow: 2.5px 2px 3px #d5d5d5;
+			text-transform: uppercase;
+
+		}
+	}
 }
 
 * {
@@ -86,5 +105,6 @@ li, ol, ul {
 
 a {
     text-decoration: none;
+
 }
 
