--- a/scss/index.scss
+++ b/scss/index.scss
@@ -338,17 +338,34 @@ body {
 							top: 0;
 							width: 100%;
 							height: 100%;
-							background-color: #fff;
 
 							.content {
 								width: 100%;
 								height: 100%;
 								display: flex;
+								justify-content: space-between;
+								background-color: #fff;
+								border-radius: 30px;
 
 								.content-left {
-									width: 400px;
-									height: 100%;
+									width: 380px;
+									height: 500px;
 									position: relative;
+									top: 50%;
+									transform: translateY(-50%);
+									background-color: #fff;
+
+									.portfolio-content-title-num {
+										position: absolute;
+										top: -60px;
+										left: 0;
+
+										b {
+											font-size: 230px;
+											letter-spacing: 0px;
+											color: #eee;
+										}
+									}
 
 									.portfolio-content-info-box {
 										position: absolute;
@@ -365,7 +382,7 @@ body {
 
 										.portfolio-content-info {
 											padding-top: 30px;
-											font-size: 20px;
+											font-size: 16px;
     										color: #121212;
 										}
 
@@ -375,27 +392,33 @@ body {
 										}
 									}
 
-									.portfolio-content-view-btn {
-										font-size: 20px;
-										padding: 10px 35px;
-										border: 1px solid #ababab;
-										letter-spacing: 5px;
+									.portfolio-content-btn-wrap {
 										position: absolute;
-										bottom: 80px;
-										left: 50%;
-										transform: translateX(-50%);
+										display: flex;
+										justify-content: space-evenly;
+										bottom: 50px;
+										width: 100%;
+
+										.portfolio-content-btn {
+											font-size: 20px;
+											padding: 10px 35px;
+											border: 1px solid #ababab;
+											letter-spacing: 5px;
+										}
 									}
 								}
 
 								.content-right {
 									width: 800px;
 									height: 100%;
+									
 
 									.content-portpolio-img {
 										width: 100%;
 										height: 450px;
 										position: relative;
 										overflow: hidden;
+										margin-top: 60px;
 
 										img {
 											position: absolute;
@@ -406,11 +429,24 @@ body {
 											height: auto;
 											transition: 10s ease-in-out;
 										}
-
-
 									}
 
-									@include skill-button;
+									.portfolio-skill-box-wrap {
+										margin-top: 10px;
+								
+										.portfolid-skill-box {
+
+
+											@include tag;
+										}
+										
+										.portfolid-skill-tag {
+
+											margin-top: 10px;
+											@include tag;
+										}
+									}
+									
 								}
 							}
 						}
@@ -422,23 +458,29 @@ body {
 					top: 50%;
 					transform:translateY(-50%);
 					z-index: 999999;
-					height: 5rem;
-					width: 5rem;
 					border-radius: 50%;
 					transition: all .3s ease-in;
 					background: rgba(255, 255, 255, .5);
 					text-align: center;
-					line-height: 5rem;
 					font-size: 20px;
 					color: #444;
 				}
 
+				#prev, #next {
+
+					i {
+						padding: 7px 10px;
+						background-color: rgba(255, 255, 255, .7);
+						border-radius: 50%;
+					}
+				}
+
 				#prev {
-					left: 20px;
+					left: -110px;
 				}
 				
 				#next {
-					right: 20px;
+					right: -110px;
 				}
 				
 				.disabled {
@@ -478,7 +520,6 @@ body {
 			width: 100%;
 			height: 500vh;
 			margin: 100vh 0;
-			border: 1px solid red;
 
 			.sticky {
 				position: sticky;
@@ -489,6 +530,8 @@ body {
 				justify-content: center;
 				overflow: hidden;
 
+				@include stars;
+
 				.title {
 					width: 100%;
 					position: absolute;
@@ -498,8 +541,12 @@ body {
 					text-align: center;
 
 					h2 {
-						font-size: 50px;
-						letter-spacing: 50px;
+						font-size: 70px;
+						letter-spacing: 40px;
+						color: #e9e9e9;
+
+						@include neon_line;
+						position: initial;
 					}
 				}
 
@@ -510,6 +557,7 @@ body {
 					display: flex;
 					align-items: center;
 					justify-content: space-between;
+					z-index: 5;
 
 					.card {
 						width: 24%;
@@ -587,7 +635,7 @@ body {
 
 								.info-title {
 									position: absolute;
-									top: -5%;
+									top: -10%;
 									font-size: 16px;
 
 									@include info-title;
@@ -618,7 +666,7 @@ body {
 
 								.info-title {
 									position: absolute;
-									top: -5%;
+									top: -10%;
 
 
 									@include info-title;
@@ -654,7 +702,7 @@ body {
 								.skill-box {
 									width: 100px;
 									height: 25px;
-									background-color: #ccc;
+									background-color: rgba(207 206 255 / 70%);
 									text-align: center;
 									display: flex;
 									padding: 10px 20px;
@@ -664,11 +712,25 @@ body {
 									cursor: pointer;
 
 									span {
-										font-size: 12px;
+										font-size: 16px;
 									}
 								}
 							}
-						}
+
+							.certificate-wrap {
+								padding: 20px 15px;
+
+								.info-wrap {
+									display: flex;
+    width: 400px;
+    justify-content: space-between;
+    padding-top: 10px;
+    font-size: 15px;
+								}
+
+								@include circle;
+							}
+						} // front
 
 						.back {
 							transform: rotateY(180deg);
@@ -677,6 +739,8 @@ body {
 						}
 					
 					}
+
+					
 
 
 		
